tests/resource/valid/function/callable_fun_arg.mamba
def f(x: (Int) -> Int, y: Int) -> Int => x(y)

f(\z: Int => z + 2, 4)
