tests/resource/invalid/type/function/no_enough_arg.mamba
def f(x: Int, y: Int) -> Int => x + y

f(1)
